Fechas y mas cambios en BACK

--- a/views/error.jade
+++ b/views/error.jade
@@ -3,4 +3,6 @@ extends layout
 block content
   h1= message
   h2= error.status
+  h2
+    No No deberias estar aqui pues porque paso un error y estos son los logs
   pre #{error.stack}
